# newsfeedback

./: .gitignore  README.md  pyproject.toml  user_homepage_config.yaml  user_metadata_config.yaml
.github/workflows/: condensed-picker-tests.yml  main.yml  python-package.yml
newsfeedback/: default_metadata_config.yaml  main.py
newsfeedback/defaults/: default_filter_choice_config.yaml  default_filter_sections_config.yaml  default_homepage_config.yaml
tests/: test_main.py
